[project]
name = "pyerror"
version = "0.0.1"
authors = [
    {name="Bert Jorissen", email="info@bertjorissen.be"}
]
description = "Testing the Matplotlib 3.9.1 bug with Pybind11"
readme = "readme.md"
dependencies = [
    "matplotlib"
]
requires-python = ">=3.9"

[project.urls]
"repository" = "https://github.com/BertJorissen/mplpb11"

[build-system]
requires = [
    "pybind11>=2.6.2",
    "setuptools",
    "wheel",
    "cmake>=3.5.0"
]
build-backend = "setuptools.build_meta"